Modified homepage layout

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -3,17 +3,16 @@
   = image_tag('home_page/header.jpg', class: "wide" , alt: "ColorSisters Home Page")
   .text-wrapper
     p.text
-      | Welcome to ColorSisters-the only color accurate e-commerce 
-      | delivery platform that simplifies finding the ideal color cosmetic 
-      | products to achieve your desired look designed specifically for your skin tone. 
-      | ColorSisters is in closed beta and wants to invite you to be one of fist to 
-      | experience the science behind the beautiful you.
-    .title-row
-      p.title 
-        | FIND YOUR COLOR MATCH
-        
-      / .title-img
-      = image_tag('home_page/dots.png' , alt: "")
+      | Welcome to ColorSisters Beta program! We want to invite you to be one of the first 
+      | to experience the science behind the beautiful you. 
+    
+    / .title-row
+    = button_to("REGISTER FOR AN INVITATION ", new_user_registration_path, class: "button large expand", method: :get)
+      / p.title
+      /   | REGISTER FOR AN INVITATION
+      /
+      / / .title-img
+      / = image_tag('home_page/dots.png' , alt: "")
   
 .row
 ul.imagelist.small-block-grid-3
@@ -21,30 +20,43 @@ ul.imagelist.small-block-grid-3
     .box1
       = image_tag('home_page/step1-empty.jpg', class: "row-image bk_image", alt: "ColorSisters Step 1")
       p.title 
-        | STEP 1
+        | EASY
       p.text
-        | Color accurate mobile technology–as easy to use as taking a 
-        | selfie with your cell phone.
+        | Snap a selfie. 
   li.col2
     .box2
       = image_tag('home_page/step2-empty.jpg', class: "row-image bk_image", alt: "ColorSisters Step 2")
       p.title 
-        | STEP 2
+        | INSPIRED
       p.text
-        | Save time and money with scientific color matching at home. Buy an entire suite of 
-        | products for your desired look with just one click.
+        | Find the perfect look.
   li.col3
     .box3
       = image_tag('home_page/step3-empty.jpg', class: "row-image bk_image", alt: "ColorSisters Step 3")
       p.title 
-        | STEP 3
+        | ACCURATE
       p.text
-        | Products are tested by women who are just like you.  Be confident 
-        | in your selection while eliminating the challenges of buying color 
-        | cosmetics online.
+        | COMING SOON! 
 
 
-
-
+.row.panel
+  p
+    | Welcome to ColorSisters! ColorSisters is the only color accurate e-commerce discovery platform that simplifies finding the ideal color cosmetic products to achieve your desired look designed specifically for your skin tone.
+  p
+    | Using color accurate mobile technology–finding the right looks and product recommendations matched to your skin tone is as easy as taking a selfie.
+  p
+    | Save time and money with scientific color matching at home. Buy an entire suite of products for your desired look with just one click.
+  p
+    | Products are tested by women who are just like you. Be confident in your selection while eliminating the challenges of buying color cosmetics online.
+  p
+    | Come back often as we are just beginning and launching exciting new features often! We are happy that you are here and can not wait to inspire the beautiful you.
+  p
+    | For more information and to request an invitation to our exclusive Beta program, simply 
+    = link_to "REGISTER FOR AN INVITATION ", new_user_registration_path 
+    | and be one of the first to experience the science behind the beautiful you."
+    
+    
+    
+  
 
 /  <%= videojs_rails(sources: { mp4: '/videos/terry_naturallift.mp4', controls: false,  poster: '/images/terry_video_poster.png', height: '320', width: '480'}) %> 
