--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+$lt-blue: #A6CFDA;
+$gold: #B6885A;
 
 //#####  Banner Callout
 
@@ -28,17 +29,20 @@
       width: 100%;  
       font-family: Raleway;
       font-weight: normal;
-      font-size: 0.9rem;
-      line-height: 1.5;
+      font-size: 1.1rem;
+      line-height: 1.3;
     }
   
-
+    .button {
+      background-color: $gold;
+      color: white;
+    }
     .title-row {
-      background: rgba(0,0,0,0.75);
+      background: rgba(6,6,6,0.9);
       width: 100%;
       right: 0;
-      padding: .35rem;
-      
+      padding: .90rem;
+//      button_to "REGISTER FOR AN INVITATION", new_user_registration_path
       p.title {
         display: inline;
         color: white;
@@ -46,9 +50,10 @@
         font-family: Raleway;
         font-weight: normal;
         font-size: 1.2rem;
-//        padding 0.6rem 0.4rem
-        padding-right: .6rem;
-        padding-left: .4rem;
+        padding-top: 0.9%;
+        padding-bottom: 2%;
+        padding-right: 1%;
+        padding-left: 1%;
       }
 
       img {
@@ -66,13 +71,12 @@
 
 //#####  3 Image Row below banner
 
-$lt-blue: #A6CFDA;
+
 
 ul.imagelist {
   
   
   p {
-    
     margin: 0;
   }
   
@@ -90,7 +94,7 @@ ul.imagelist {
       top: 4%;
       left: 22%;
       font-family: Raleway;
-      font-size: 1.4rem;
+      font-size: 2rem;
       text-decoration: underline;
     }
     
@@ -98,13 +102,12 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 0.9rem;
-      line-height: 1.5;
+      font-size: 1.6rem;
+      line-height: 1.4;
       color: white;
-      top: 20%;
-      left: 22%;
+      top: 28%;
+      left: 25%;
       right: 3%;
-      padding: .6rem;
     }
   }
   
@@ -121,9 +124,9 @@ ul.imagelist {
       color: $lt-blue;
       position: absolute;
       top: 4%;
-      left: 3%;
+      left: 9%;
       font-family: Raleway;
-      font-size: 1.4rem;
+      font-size: 2rem;
       text-decoration: underline;
     }
     
@@ -131,13 +134,13 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 0.9rem;
-      line-height: 1.5;
+      font-size: 1.6rem;
+      line-height: 1.4;
       color: white;
-      top: 20%;
-      left: 3%;
+      top: 28%;
+      left: 12%;
       right: 48%;
-      padding: .6rem;
+      padding: 2%;
     }
   }
   
@@ -154,9 +157,9 @@ ul.imagelist {
       color: $lt-blue;
       position: absolute;
       top: 4%;
-      left: 3%;
+      left: 9%;
       font-family: Raleway;
-      font-size: 1.4rem;
+      font-size: 2rem;
       text-decoration: underline;
     }
     
@@ -164,13 +167,13 @@ ul.imagelist {
       position: absolute;
       font-family: Raleway;
       font-weight: 300;
-      font-size: 0.9rem;
-      line-height: 1.5;
+      font-size: 1.6rem;
+      line-height: 1.4;
       color: white;
-      top: 20%;
+      top: 28%;
       left: 3%;
       right: 38%;
-      padding: .6rem;
+      padding: 1%;
     }
   }
   
@@ -179,157 +182,168 @@ ul.imagelist {
 
 //##### media-queries
 
-@media screen and (min-width: 1170px ) {
-  .text-wrapper .title-row span.title {
-    font-size: 1.2rem;
-  }
+//@media screen and (min-width: 1009px ) {
+//
+//  .text-wrapper .title-row p.title {
+//    font-size: 1.2rem;
+//  }
+//
+//  .text-wrapper p.text {
+//    font-size: 1.1rem;
+//  }
+//
+//  ul li {
+//    p.title {
+//      font-size: 2rem;
+//    }
+//
+//
+//    p.text {
+//      font-size: 1.4rem;
+//    }
+//  }
+//}
 
-  .text-wrapper .text {
-    font-size: 1.0rem;
-  }
+@media screen and (min-width: 600px )
+              and (max-width: 1008px)  {
   
-}
+//  .text-wrapper .title-row p.title {
+//    font-size: 2rem;
+//  }
 
-@media screen and (min-width: 937px )
-              and (max-width: 1169px)  {
-  .text-wrapper .title-row span.title {
-    font-size: 1rem;
-  }
-
-  .text-wrapper .text {
-    font-size: 0.9rem;
-    height:  4%;
-  }
-
-
-  .text-wrapper {
-    top: 52%;
-    width: 38%;
-    line-height: 1.4;
-  
-  }
-  
-  
-}
-
-
-@media screen and (min-width: 776px )
-              and (max-width: 936px)  {
-  .text-wrapper .title-row span.title {
-    font-size: .8rem;
-    padding: 0;
-    margin: 0;
-    height: 25%;
-  }
-
-  .text-wrapper .text {
+  .text-wrapper p.text {
     font-size: 0.8rem;
-    line-height: 1.3;
-
   }
 
-  .text-wrapper {
-    top: 48%;
-    width: 38%;
-    line-height: 1.4;
-  
-  }
-  
-  
-}
+  ul li {
+    p.title {
+      font-size: 0.8rem;
+    }
 
-
-
-@media screen and (min-width: 685px )
-              and (max-width: 775px)  {
-
-  .text-wrapper .text {
-    font-size: 0.7rem;
-    line-height: 1.3;
-
-  }
-  
-  .text-wrapper .title-row span.title {
-    font-size: .8rem;
-    height: 25%;
-  }
-
-
-  .text-wrapper {
-    top: 48%;
-    width: 38%;
-    line-height: 1.4;
-  
-  }
-  
-  
-}
-
-
-
-@media screen and (min-width: 560px )
-              and (max-width: 684px)  {
-
-  .text-wrapper .text {
-    display: none;
-  }
-  
-  .text-wrapper .title-row span.title {
-    font-size: .8rem;
-    padding: .2rem;
-  }
-
-
-  .text-wrapper {
-    top: 62%;
-    width: 38%;
-  }
-  
-  
-}
-
-
-
-
-@media screen and (min-width: 383px )
-              and (max-width: 559px)  {
-
-  .text-wrapper .text {
-    display: none;
-  }
-  
-  .text-wrapper .title-row span.title {
-    font-size: .5rem;
-    padding: .2rem;
-  }
-
-
-  .text-wrapper {
-    top: 62%;
-    width: 38%;
-    line-height: 1.4;
-  
+    p.text {
+      font-size: 0.5rem;
+    }
   }
 }
-  
 
-  @media screen and (min-width: 320px )
-                and (max-width: 382px)  {
 
-//    .text-wrapper .text {
+//@media screen and (min-width: 776px )
+//              and (max-width: 936px)  {
+//  .text-wrapper .title-row span.title {
+//    font-size: .8rem;
+//    padding: 0;
+//    margin: 0;
+//    height: 25%;
+//  }
+//
+//  .text-wrapper .text {
+//    font-size: 0.8rem;
+//    line-height: 1.3;
+//
+//  }
+//
+//  .text-wrapper {
+//    top: 48%;
+//    width: 38%;
+//    line-height: 1.4;
+//
+//  }
+//
+//
+//}
+
+
+//
+//@media screen and (min-width: 685px )
+//              and (max-width: 775px)  {
+//
+//  .text-wrapper .text {
+//    font-size: 0.7rem;
+//    line-height: 1.3;
+//
+//  }
+//
+//  .text-wrapper .title-row span.title {
+//    font-size: .8rem;
+//    height: 25%;
+//  }
+//
+//
+//  .text-wrapper {
+//    top: 48%;
+//    width: 38%;
+//    line-height: 1.4;
+//
+//  }
+//
+//
+//}
+//
+//
+//
+//@media screen and (min-width: 560px )
+//              and (max-width: 684px)  {
+//
+//  .text-wrapper .text {
+//    display: none;
+//  }
+//
+//  .text-wrapper .title-row span.title {
+//    font-size: .8rem;
+//    padding: .2rem;
+//  }
+//
+//
+//  .text-wrapper {
+//    top: 62%;
+//    width: 38%;
+//  }
+//
+//
+//}
+//
+//
+//
+//
+//@media screen and (min-width: 383px )
+//              and (max-width: 559px)  {
+//
+//  .text-wrapper .text {
+//    display: none;
+//  }
+//
+//  .text-wrapper .title-row span.title {
+//    font-size: .5rem;
+//    padding: .2rem;
+//  }
+//
+//
+//  .text-wrapper {
+//    top: 62%;
+//    width: 38%;
+//    line-height: 1.4;
+//
+//  }
+//}
+//
+//
+//  @media screen and (min-width: 320px )
+//                and (max-width: 382px)  {
+//
+////    .text-wrapper .text {
+////      display: none;
+////    }
+////
+////    .text-wrapper .title-row {
+////      display: none;
+////    }
+//
+//
+//    .text-wrapper {
 //      display: none;
 //    }
 //
-//    .text-wrapper .title-row {
-//      display: none;
-//    }
-
-
-    .text-wrapper {
-      display: none;
-    }
-  
-}
+//}
 
 //
 //@media screen and (min-width: 380px )
