Implemented responsive layout

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -7,7 +7,7 @@
       | to experience the science behind the beautiful you. 
     
     / .title-row
-    = button_to("REGISTER FOR AN INVITATION ", new_user_registration_path, class: "button large expand", method: :get)
+    = link_to("REGISTER FOR AN INVITATION ", new_user_registration_path, class: "lbutton", method: :get)
       / p.title
       /   | REGISTER FOR AN INVITATION
       /
