--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -5,65 +5,74 @@
 $lt-blue: #A6CFDA;
 $gold: #B6885A;
 
+body p {
+  font: 1rem/1.4 Raleway;
+}
 //#####  Banner Callout
 
 .banner-container {
   position: relative;
-//  display: block;
-
-
-
 
   .text-wrapper {
-//    display: block;
     position: absolute;
     top:53%;
-    right:0;
-    width: 38%;
+    right:1%;
+    width: 37%;
     overflow: hide;
   
-    p.text {
-      background: rgba(255,255,255,0.9);
-      padding:.5rem;
-      margin: 0px;
-      width: 100%;  
-      font-family: Raleway;
-      font-weight: normal;
-      font-size: 1.1rem;
-      line-height: 1.3;
-    }
-  
-    .button {
-      background-color: $gold;
-      color: white;
-    }
-    .title-row {
-      background: rgba(6,6,6,0.9);
-      width: 100%;
-      right: 0;
-      padding: .90rem;
-//      button_to "REGISTER FOR AN INVITATION", new_user_registration_path
-      p.title {
-        display: inline;
-        color: white;
-        width: 100%;
-        font-family: Raleway;
-        font-weight: normal;
-        font-size: 1.2rem;
-        padding-top: 0.9%;
-        padding-bottom: 2%;
-        padding-right: 1%;
-        padding-left: 1%;
+      p.text {
+        background: rgba(255,255,255,0.9);
+        padding:.5rem;
+        margin: 0px;
+        width: 100%; 
+        font: normal 1.1rem/1.3 Raleway; 
       }
-
-      img {
-        height: 10%;
-        width: 10%;  
-//        display: inline;
+  
+      .lbutton {
+        display: block;
+        color: white;
+        background: $gold;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        font: 1.2rem/2.9 Raleway;
+        border: .1rem solid $gold;
+        border-radius: .4rem;
+      }
+    
+      a.lbutton {
+        text-decoration: none;
       }
       
-    }
+      a.lbutton:hover {
+        border: .1rem solid black;
+        color: $lt-blue;
+      }
+//    .title-row {
+//      background: rgba(6,6,6,0.9);
+//      width: 100%;
+//      right: 0;
+//      padding: .90rem;
+////      button_to "REGISTER FOR AN INVITATION", new_user_registration_path
+//      p.title {
+//        display: inline;
+//        color: white;
+//        width: 100%;
+//        font-family: Raleway;
+//        font-weight: normal;
+//        font-size: 1.2rem;
+//        padding-top: 0.9%;
+//        padding-bottom: 2%;
+//        padding-right: 1%;
+//        padding-left: 1%;
+//      }
 
+//      img {
+//        height: 10%;
+//        width: 10%;
+////        display: inline;
+//      }
+      
   }
 
 }
@@ -93,17 +102,13 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 22%;
-      font-family: Raleway;
-      font-size: 2rem;
+      font: 2rem/1.6 Raleway;
       text-decoration: underline;
     }
     
     p.text {
       position: absolute;
-      font-family: Raleway;
-      font-weight: 300;
-      font-size: 1.6rem;
-      line-height: 1.4;
+      font: 300 1.6rem/1.4 Raleway;
       color: white;
       top: 28%;
       left: 25%;
@@ -125,17 +130,13 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 9%;
-      font-family: Raleway;
-      font-size: 2rem;
+      font: 2rem/1.6 Raleway;
       text-decoration: underline;
     }
     
     p.text {
       position: absolute;
-      font-family: Raleway;
-      font-weight: 300;
-      font-size: 1.6rem;
-      line-height: 1.4;
+      font: 300 1.6rem/1.4 Raleway;
       color: white;
       top: 28%;
       left: 12%;
@@ -158,20 +159,16 @@ ul.imagelist {
       position: absolute;
       top: 4%;
       left: 9%;
-      font-family: Raleway;
-      font-size: 2rem;
+      font: 2rem/1.6 Raleway;
       text-decoration: underline;
     }
     
     p.text {
       position: absolute;
-      font-family: Raleway;
-      font-weight: 300;
-      font-size: 1.6rem;
-      line-height: 1.4;
+      font: 300 1.6rem/1.4 Raleway;
       color: white;
       top: 28%;
-      left: 3%;
+      left: 12%;
       right: 38%;
       padding: 1%;
     }
@@ -180,194 +177,305 @@ ul.imagelist {
 }
 
 
-//##### media-queries
-
-//@media screen and (min-width: 1009px ) {
-//
-//  .text-wrapper .title-row p.title {
-//    font-size: 1.2rem;
-//  }
-//
-//  .text-wrapper p.text {
-//    font-size: 1.1rem;
-//  }
-//
-//  ul li {
-//    p.title {
-//      font-size: 2rem;
-//    }
-//
-//
-//    p.text {
-//      font-size: 1.4rem;
-//    }
-//  }
-//}
-
-@media screen and (min-width: 600px )
+@media screen and (min-width: 895px )
               and (max-width: 1008px)  {
+  
+  .banner-container .text-wrapper {
+    
+     p.text {
+       font: normal 1rem/1.3 Raleway; 
+    }
+    
+    .lbutton {
+      font: 1.2rem/2.3 Raleway;
+    }
+  }
+  ul.imagelist {
+    
+    .box1 {
+      p.title {
+        font: 1.4rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.6rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box2 {
+      p.title {
+        font: 2rem/1.6 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.6rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box3 {
+
+      p.title {
+        font: 2rem/1.6 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.6rem/1.4 Raleway;
+      }
+    }
+  
+  }
+}
+
+
+@media screen and (min-width: 701px )
+              and (max-width: 894px)  {
+
+  .banner-container .text-wrapper {
+    top:50%;
+    right:1%;
+    width: 38%;
+    
+     p.text {
+       font: normal .9rem/1.3 Raleway; 
+    }
+    
+    .lbutton {
+      font: .9rem/2.3 Raleway;
+    }
+  }
+  ul.imagelist {
+    
+    .box1 {
+      p.title {
+        font: 1.6rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.2rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box2 {
+      p.title {
+        font: 1.6rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.2rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box3 {
+
+      p.title {
+        font: 1.6rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 1.2rem/1.4 Raleway;
+      }
+    }
+  
+  }
+  body p {
+    font: .9rem/1.3 Raleway;
+  }
+  
+}
+
+
+
+
+@media screen and (min-width: 520px )
+              and (max-width: 700px)  {
   
 //  .text-wrapper .title-row p.title {
 //    font-size: 2rem;
 //  }
 
-  .text-wrapper p.text {
-    font-size: 0.8rem;
+  .banner-container .text-wrapper {
+    top:40%;
+    right:1%;
+    width: 41%;
+    
+     p.text {
+       font: normal .7rem/1.3 Raleway; 
+    }
+    
+    .lbutton {
+      font: .8rem/1.8 Raleway;
+    }
   }
-
-  ul li {
-    p.title {
-      font-size: 0.8rem;
+  ul.imagelist {
+    
+    .box1 {
+      p.title {
+        font: 1.2rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .95rem/1.4 Raleway;
+      }
     }
-
-    p.text {
-      font-size: 0.5rem;
+  
+  
+    .box2 {
+      p.title {
+        font: 1.2rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .95rem/1.4 Raleway;
+      }
     }
+  
+  
+    .box3 {
+
+      p.title {
+        font: 1.2rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .95rem/1.4 Raleway;
+      }
+    }
+  
+  }
+  body p {
+    font: .8rem/1.3 Raleway;
   }
 }
 
 
-//@media screen and (min-width: 776px )
-//              and (max-width: 936px)  {
-//  .text-wrapper .title-row span.title {
-//    font-size: .8rem;
-//    padding: 0;
-//    margin: 0;
-//    height: 25%;
+@media screen and (min-width: 421px )
+              and (max-width: 519px)  {
+  
+//  .text-wrapper .title-row p.title {
+//    font-size: 2rem;
 //  }
-//
-//  .text-wrapper .text {
-//    font-size: 0.8rem;
-//    line-height: 1.3;
-//
-//  }
-//
-//  .text-wrapper {
-//    top: 48%;
-//    width: 38%;
-//    line-height: 1.4;
-//
-//  }
-//
-//
-//}
+
+  .banner-container .text-wrapper {
+    top:23%;
+    right:1%;
+    width: 43%;
+    
+     p.text {
+       font: normal .7rem/1.3 Raleway; 
+    }
+    
+    .lbutton {
+      font: .75rem/1.8 Raleway;
+    }
+  }
+  ul.imagelist {
+    
+    .box1 {
+      p.title {
+        font: .9rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .75rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box2 {
+      p.title {
+        font: .9rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .75rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box3 {
+
+      p.title {
+        font: .9rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .75rem/1.4 Raleway;
+      }
+    }
+  
+  }
+  body p {
+    font: .8rem/1.3 Raleway;
+  }
+}
 
 
-//
-//@media screen and (min-width: 685px )
-//              and (max-width: 775px)  {
-//
-//  .text-wrapper .text {
-//    font-size: 0.7rem;
-//    line-height: 1.3;
-//
-//  }
-//
-//  .text-wrapper .title-row span.title {
-//    font-size: .8rem;
-//    height: 25%;
-//  }
-//
-//
-//  .text-wrapper {
-//    top: 48%;
-//    width: 38%;
-//    line-height: 1.4;
-//
-//  }
-//
-//
-//}
-//
-//
-//
-//@media screen and (min-width: 560px )
-//              and (max-width: 684px)  {
-//
-//  .text-wrapper .text {
-//    display: none;
-//  }
-//
-//  .text-wrapper .title-row span.title {
-//    font-size: .8rem;
-//    padding: .2rem;
-//  }
-//
-//
-//  .text-wrapper {
-//    top: 62%;
-//    width: 38%;
-//  }
-//
-//
-//}
-//
-//
-//
-//
-//@media screen and (min-width: 383px )
-//              and (max-width: 559px)  {
-//
-//  .text-wrapper .text {
-//    display: none;
-//  }
-//
-//  .text-wrapper .title-row span.title {
-//    font-size: .5rem;
-//    padding: .2rem;
-//  }
-//
-//
-//  .text-wrapper {
-//    top: 62%;
-//    width: 38%;
-//    line-height: 1.4;
-//
-//  }
-//}
-//
-//
-//  @media screen and (min-width: 320px )
-//                and (max-width: 382px)  {
-//
-////    .text-wrapper .text {
-////      display: none;
-////    }
-////
-////    .text-wrapper .title-row {
-////      display: none;
-////    }
-//
-//
-//    .text-wrapper {
-//      display: none;
-//    }
-//
-//}
 
-//
-//@media screen and (min-width: 380px )
-//              and (max-width: 475px)  {
-//
-//  .text-wrapper .text {
-//    display: none;
+
+@media screen and (min-width: 300px )
+              and (max-width: 420px)  {
+  
+//  .text-wrapper .title-row p.title {
+//    font-size: 2rem;
 //  }
-//
-//  .text-wrapper .title-row span.title {
-//    font-size: .5rem;
-//    padding: .2rem;
-//  }
-//
-//
-//  .text-wrapper {
-//    top: 62%;
-//    width: 38%;
-//    line-height: 1.4;
-//
-//  }
-//
-//
-//}
+
+  .banner-container .text-wrapper {
+    top:12%;
+    right:1%;
+    width: 47%;
+    
+     p.text {
+       font: normal .6rem/1.3 Raleway; 
+    }
+    
+    .lbutton {
+      font: .6rem/1.7 Raleway;
+    }
+  }
+  ul.imagelist {
+    
+    .box1 {
+      p.title {
+        font: .8rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .6rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box2 {
+      p.title {
+        font: .8rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .6rem/1.4 Raleway;
+      }
+    }
+  
+  
+    .box3 {
+
+      p.title {
+        font: .8rem/1.4 Raleway;
+      }
+    
+      p.text {
+        font: 300 .6rem/1.4 Raleway;
+      }
+    }
+  
+  }
+  body p {
+    font: .75rem/1.3 Raleway;
+  }
+}
 
 
 
