--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -424,9 +424,9 @@ ul.imagelist {
 //  }
 
   .banner-container .text-wrapper {
-    top:12%;
+    top:2%;
     right:1%;
-    width: 47%;
+    width: 45%;
     
      p.text {
        font: normal .6rem/1.3 Raleway; 
@@ -463,7 +463,7 @@ ul.imagelist {
     .box3 {
 
       p.title {
-        font: .8rem/1.4 Raleway;
+        font: .8/app/styrem/1.4 Raleway;
       }
     
       p.text {
