Minor formatting changes

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -41,7 +41,7 @@ ul.imagelist.small-block-grid-3
 .middle
   .row.panel
   
-    h2#body_text COMING SOON!
+    h5#body_text Coming Soon!
     p
       | Welcome to ColorSisters! ColorSisters is the only color accurate e-commerce discovery platform that simplifies finding the ideal color cosmetic products to achieve your desired look designed specifically for your skin tone.
     p
@@ -55,7 +55,7 @@ ul.imagelist.small-block-grid-3
     p
       | For more information and to request an invitation to our exclusive Beta program, simply 
       = link_to "REGISTER FOR AN INVITATION ", new_user_registration_path 
-      | and be one of the first to experience the science behind the beautiful you."
+      | and be one of the first to experience the science behind the beautiful you.
     
     
     
